--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
         <meta name="author" content="vass">
-        <link href="main/style2.css" rel="stylesheet">                                  
+        <link href="main/style.css" rel="stylesheet">                                  
         <title>home</title>
+        <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+        <div class="hero-container" data-aos="fade-in">
+      <p>Hello there! <span class="typed" data-typed-items="welcome"></span></p>
+    </div>
+  </section>
     </head>
 <body>
 </body>
