--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en" dir="ltr">
     <head>
-        <header class="header">The Website </header><br>
+        <header id="header">The Website </header><br>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0>
         <link rel="preconnect" href="https://fonts.gstatic.com">
