Div element for header

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <html lang="en" dir="ltr">
     <head>
-        <header id="header">The Website </header><br>
+        <section id="header" class="d-flex flex-column justify-content-center align-items-center">
+        <div class="hero-container" data-aos="fade-in">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0>
         <link rel="preconnect" href="https://fonts.gstatic.com">
