--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 
 <html lang="en" dir="ltr">
     <head>
-        <section id="header" class="d-flex flex-column justify-content-center align-items-center">
-        <div class="header-container" data-aos="fade-in">
+        <div id="header"><p>website</p></div>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0>
         <link rel="preconnect" href="https://fonts.gstatic.com">
