--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en" dir="ltr">
     <head>
-        <div id="header"><p>website</p></div>
+        
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0>
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -10,6 +10,7 @@
         <meta name="author" content="vass">
         <link href="main/style.css" rel="stylesheet">                                  
         <title>home</title>
+        <div class="header"><p>website</p></div>
         <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
         <div class="hero-container" data-aos="fade-in">
       <p>Hello there! <span class="typed" data-typed-items="welcome"></span></p>
