--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <meta name="author" content="vass">
         <link href="main/style.css" rel="stylesheet">                                  
         <title>home</title>
-        <div class="header"><p>website</p></div>
+        <header>
+        <div class="header"><p>website</p></div></header>
         <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
         <div class="hero-container" data-aos="fade-in">
       <p>Hello there! <span class="typed" data-typed-items="welcome"></span></p>
