--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         <link href="main/style.css" rel="stylesheet">                                  
         <title>home</title>
         <header>
-        <div class="header"><p>website</p></div></header>
-        <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+        <div id="bar"></div>
         <div class="hero-container" data-aos="fade-in">
       <p>Hello there! <span class="typed" data-typed-items="welcome"></span></p>
     </div>
