--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         <meta name="author" content="vass">
         <link href="main/style.css" rel="stylesheet">                                  
         <title>home</title>
-        <header>
+        
         <div id="bar"></div>
+        <section id="hero">
         <div class="hero-container" data-aos="fade-in">
       <p>Hello there! <span class="typed" data-typed-items="welcome"></span></p>
     </div>
