--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <title>home</title>
         
         <div id="bar"></div>
-        <section id="hero">
+        <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
         <div class="hero-container" data-aos="fade-in">
       <p>Hello there! <span class="typed" data-typed-items="welcome"></span></p>
     </div>
-  </section>
+  </section> 
     </head>
 <body>
 </body>
