--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <meta name="author" content="vass">
         <link href="main/style.css" rel="stylesheet">                                  
         <title>home</title>
-        
-        <div id="bar"></div>
-        <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-        <div class="hero-container" data-aos="fade-in">
-      <p>Hello there! <span class="typed" data-typed-items="welcome"></span></p>
+<section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+    <div class="hero-container" data-aos="fade-in">
+      <p>Hello there! <span class="typed" data-typed-items=" welcome "></span></p>
     </div>
-  </section> 
+<div id="bar"></div>
+  </section><!-- End Hero -->
+
     </head>
 <body>
 </body>
