--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <html lang="en" dir="ltr">
     <head>
-        <div id="bar"></div>
+<section>
+        <div id="bar"></div></section>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0>
         <link rel="preconnect" href="https://fonts.gstatic.com">
