--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 
 <html lang="en" dir="ltr">
     <head>
-<section>
-        <div id="bar"></div></section>
+
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0>
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -15,7 +14,7 @@
     <div class="hero-container" data-aos="fade-in">
       <p>Hello there! <span class="typed" data-typed-items=" welcome "></span></p>
     </div>
-
+     <div id="bar"></div>
   </section><!-- End Hero -->
 
     </head>
