--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en" dir="ltr">
     <head>
+<style>
         <div>Website</div>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0>
@@ -15,7 +16,7 @@
       <p>Hello there! <span class="typed" data-typed-items=" welcome "></span></p>
     </div>
      <div id="bar"></div>
-  </section><!-- End Hero -->
+  </section><!-- End Hero --></style>
 
     </head>
 <body>
