--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en" dir="ltr">
-    <head>
+    <head><body>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0>
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,6 +16,5 @@
   </section><!-- End Hero -->
 
     </head>
-<body>
 </body>
 </html>
