--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 
 <html lang="en" dir="ltr">
     <head><body>
+        <div id ="nav"></div>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
         <meta name="author" content="vass">
