--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <style>
 ul {
   list-style-type: none;
-  margin: 15px;
+  margin: 8px;
   padding: 10px;
   overflow: hidden;
   background:#ffcccc;
@@ -23,12 +23,13 @@ li a {
 </style>
 </head>
 <body>
-
+<!-- links to be updated later-->
 <ul>
   <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="#PRE">PRE</a></li>
+  <li><a href="#POST">POST</a></li>
+  <li><a href="#DEPRESSION">Depression</a></li>
+  <li><a href="#YOGA">Yoga</a></li>
 </ul>
     <!-- nav ends-->
     
