--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@ li {
 li a {
   display: block;
   padding: 8px;
+.dropdown-content{
+  display: block;
+  padding: 8px;
 }
 </style>
 </head>
@@ -31,6 +34,15 @@ li a {
   <li><a href="#DEPRESSION">Depression</a></li>
   <li><a href="#YOGA">Yoga</a></li>
 </ul>
+    <div class="dropdown">
+    <button class="dropbtn">Dropdown
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">Contact us</a>
+      <a href="#">About us</a>
+      <a href="#">Articles</a>
+    </div>
     <!-- nav ends-->
     
         <meta charset="utf-8">
