--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@ li a {
       <p>Hello there!</p>
     </div>
   </section><!-- background -->
+    
+    <!-- 4 tabs-->
+    <img src="assets/icon1.png" height="300px" width="350px">
 
     </head>
 </body>
