--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@ li a {
   </section><!-- background -->
     
     <!-- 4 tabs-->
-    <img src="assets/icon1.png" height="300px" width="350px">
+     <img src="assets/icon1.png" height="300px" width="350px" margin="5px">
+     <img src="assets/icon2.png" height="300px" width="350px" margin="5px" float="right">
+     <img src="assets/icon3.png" height="300px" width="350px" margin="5px">
+     <img src="assets/icon4.png" height="300px" width="350px" margin="5px" float="right">
 
     </head>
 </body>
