--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@ li a {
   </section><!-- background -->
     
     <!-- 4 tabs-->
-     <img src="assets/icon1.png" height="300px" width="350px" margin="20px">
-     <img src="assets/icon2.png" height="300px" width="350px" margin="20px" float="right">
-     <img src="assets/icon3.png" height="300px" width="350px" margin="20px">
-     <img src="assets/icon4.png" height="300px" width="350px" margin="20px" float="left">
+     <img src="assets/icon1.png" height="400px" width="400px" border="#ccfff">
+     <img src="assets/icon2.png" height="400px" width="400px" border="#ccffff">
+     <img src="assets/icon3.png" height="400px" width="400px" border="#ffcccc">
+     <img src="assets/icon4.png" height="400px" width="400px" border="#ffcccc">
 
     </head>
 </body>
