--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@ li a {
   </section><!-- background -->
     
     <!-- 4 tabs-->
-     <img src="assets/icon1.png" height="400px" width="500px">
-     <img src="assets/icon2.png" height="400px" width="500px">
-     <img src="assets/icon3.png" height="400px" width="500px">
-     <img src="assets/icon4.png" height="400px" width="500px">
+     <img src="assets/icon1.png" height="400px" width="500px" float="left 7px">
+     <img src="assets/icon2.png" height="400px" width="500px" float="right 5px">
+     <img src="assets/icon3.png" height="400px" width="500px" float="left 7px">
+     <img src="assets/icon4.png" height="400px" width="500px" float="right 5px">
 
     </head>
 </body>
