--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@ li a {
   </section><!-- background -->
     
     <!-- 4 tabs-->
+    <div class="tabs">
      <img src="assets/icon1.png" height="400px" width="500px" float="center">
      <img src="assets/icon2.png" height="400px" width="500px" float="center">
      <img src="assets/icon3.png" height="400px" width="500px" float="center">
      <img src="assets/icon4.png" height="400px" width="500px" float="center">
-
+    </div>
     </head>
 </body>
 </html>
