--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@ li a {
   </section><!-- background -->
     
     <!-- 4 tabs-->
+    <br>
     <div class="tabs">
-     <img align="middle" src="assets/icon3.png" height="440px" width="700px" float="center">
-     <img align="middle" src="assets/icon4.png" height="440px" width="700px" float="center">
-     <img align="middle" src="assets/icon2.png" height="440px" width="700px" float="center">
-     <img align="middle" src="assets/icon1.png" height="440px" width="700px" float="center">
+     <h4>YOGA<img align="middle" src="assets/icon3.png" height="440px" width="700px" float="center"></h4>
+     <h4>PRE<img align="middle" src="assets/icon4.png" height="440px" width="700px" float="center"></h4>
+     <h4>POST<img align="middle" src="assets/icon2.png" height="440px" width="700px" float="center"></h4>
+     <h4>Depression<img align="middle" src="assets/icon1.png" height="440px" width="700px" float="center"></h4>
     </div>
     </head>
 </body>
