--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@ li a {
     <!-- 4 tabs-->
     <br>
     <div class="tabs">
-     <h4>YOGA<img align="middle 40px" src="assets/icon3.png" height="440px" width="700px" ></h4>
-     <h4>PRE<img align="middle 40px" src="assets/icon4.png" height="440px" width="700px" ></h4>
-     <h4>POST<img align="middle 40px" src="assets/icon2.png" height="440px" width="700px" ></h4>
-     <h4>Depression<img align="middle 40px" src="assets/icon1.png" height="440px" width="700px" ></h4>
+     <img align="middle 40px" src="assets/icon3.png" height="440px" width="750px" >
+     <img align="middle 40px" src="assets/icon4.png" height="440px" width="750px" >
+     <img align="middle 40px" src="assets/icon2.png" height="440px" width="750px" >
+     <img src="assets/icon1.png" height="440px" width="750px" ></h4>
     </div>
     </head>
 </body>
