--- a/index.html
+++ b/index.html
@@ -51,12 +51,10 @@ li a {
     
     <!-- 4 tabs-->
     <br>
-    <div class="tabs">
      <img align="middle 40px" src="assets/icon3.png" height="440px" width="750px" >
      <img align="middle 40px" src="assets/icon4.png" height="440px" width="750px" >
-     <img align="middle 40px" src="assets/icon2.png" height="440px" width="750px" >
-     <img src="assets/icon1.png" height="440px" width="750px" ></h4>
-    </div>
+     <img align="middle 100px" src="assets/icon2.png" height="440px" width="750px" >
+     <img src="assets/icon1.png" height="440px" width="750px" >
     </head>
 </body>
 </html>
