--- a/index.html
+++ b/index.html
@@ -48,13 +48,12 @@ li a {
       <p>Hello there!</p>
     </div>
   </section><!-- background -->
-    
-    <!-- 4 tabs-->
     <br>
-     <img align="middle 40px" src="assets/icon3.png" height="440px" width="750px" >
-     <img align="middle 40px" src="assets/icon4.png" height="440px" width="750px" >
-     <img align="middle 100px" src="assets/icon2.png" height="440px" width="750px" >
-     <img src="assets/icon1.png" height="440px" width="750px" >
+    <!-- 4 tabs-->
+    <div id="tab1"><img src="assets/icon3.png" height="430px" width="730px" ></div>
+    <div id="tab2"><img src="assets/icon4.png" height="430px" width="730px" ></div>
+    <div id="tab3"><img src="assets/icon2.png" height="430px" width="730px" ></div>
+    <div id="tab4"><img src="assets/icon1.png" height="430px" width="730px" ></div>
     </head>
 </body>
 </html>
